# hf_lib

./: CMakeLists.txt  LICENSE.txt  README.md
include/: hf_algorithm.h  hf_buffer.h  hf_circle.h  hf_intersection.h  hf_line.h  hf_mat.h  hf_memory.h  hf_path.h  hf_quat.h  hf_shape.h  hf_string.h  hf_transform.h  hf_triangle.h  hf_ui.h  hf_vec.h
src/: hf_algorithm.c  hf_buffer.c  hf_intersection.c  hf_line.c  hf_mat.c  hf_memory.c  hf_path.c  hf_path_unix.c  hf_path_win32.c  hf_quat.c  hf_shape.c  hf_string.c  hf_transform.c  hf_triangle.c  hf_ui.c  hf_vec.c
tests/: test_algorithm.c  test_mat.c  test_path.c  test_string.c  test_transform.c
